--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -2,45 +2,53 @@
 <html>
 <head>
 <title>{{title}}</title>
+<link href="static/jquery-ui.1.11.2.min.css" rel="stylesheet" />
 </head>
 <body>
 
-<center id="data-pick">
-	<table style="width:30%">
-		<tr>
-			<td></td>
-			<td></td>
-			<td>From</td>
-			<td>To</td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>
-				<button onclick="clearURLParams()">Reset</button>
-			</td>
-			<td>
-				<button style="margin:0px 15px" onclick="prevDay()">Previous Day</button>
-			</td>
-			<td>
-				<input type="date" id="fromDate" name="fromDate" class="dt-pick" oninput="onChanged(this.id)" value="{{fromdate|safe}}">
-				<input type="time" id="fromTime" name="fromTime" class="dt-pick" oninput="onChanged(this.id)" value="{{fromtime|safe}}">
-			</td>
-			<td>
-				<input type="date" id="toDate" name="toDate" class="dt-pick" oninput="onChanged(this.id)" value="{{todate|safe}}">
-				<input type="time" id="toTime" name="toTime" class="dt-pick" oninput="onChanged(this.id)" value="{{totime|safe}}">
-			</td>
-			<td>
-				<button style="margin:0px 15px" onclick="nextDay()">Next Day</button>
-			</td>
-			<td>
-				<button onclick="submitFromTo()">Show Data</button>
-			</td>
-		</tr>
-	</table>
-</center>
+<div class="voltLowWarn" style="float:left;visibility:hidden;">
+<br>
+<div style="font-size:1.5em;background-color:yellow;margin-left:1em">Please charge the battery!</div>
+</div>
+<div class="voltLowWarn" style="float:right;visibility:hidden;">
+<br>
+<div style="font-size:1.5em;background-color:yellow;margin-right:1em">Please charge the battery!</div>
+</div>
 
-<div id="loadingGraph">Loading Graph...</div>
+<table align="center">
+	<tr>
+		<td></td>
+		<td></td>
+		<td>From</td>
+		<td>To</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>
+			<button onclick="clearURLParams()">Reset</button>
+		</td>
+		<td>
+			<button style="margin:0px 15px" onclick="prevDay()">Previous Day</button>
+		</td>
+		<td>
+			<input type="date" id="fromDate" name="fromDate" class="dt-pick" oninput="onChanged(this.id)" value="{{fromdate|safe}}">
+			<input type="time" id="fromTime" name="fromTime" class="dt-pick" oninput="onChanged(this.id)" value="{{fromtime|safe}}">
+		</td>
+		<td>
+			<input type="date" id="toDate" name="toDate" class="dt-pick" oninput="onChanged(this.id)" value="{{todate|safe}}">
+			<input type="time" id="toTime" name="toTime" class="dt-pick" oninput="onChanged(this.id)" value="{{totime|safe}}">
+		</td>
+		<td>
+			<button style="margin:0px 15px" onclick="nextDay()">Next Day</button>
+		</td>
+		<td>
+			<button onclick="submitFromTo()">Show Data</button>
+		</td>
+	</tr>
+	</table>
+
+<div id="loadingGraph"><br>Loading Graph...</div>
 
 <script src="static/data-pick.js"></script>
 
@@ -52,7 +60,6 @@
 
 <script src="static/jquery-1.11.1.min.js"></script>
 <script src="static/jquery-ui.1.11.2.min.js"></script>
-<link href="static/jquery-ui.1.11.2.min.css" rel="stylesheet" />
 <script src="static/jquery.canvasjs.min.js"></script>
 <script>{% include 'sensor_graph_jquery.js' %}</script>
 
@@ -60,10 +67,6 @@
 Max temp = undefined<br>
 Min temp = undefined
 </center>
-
-<script>
-	document.getElementById("loadingGraph").remove();
-</script>
 
 </body>
 </html>
