Add sections which help with manual min/max temperature recording

--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -64,8 +64,7 @@
 <script>{% include 'sensor_graph_jquery.js' %}</script>
 
 <center id="stats">
-Max temp = undefined<br>
-Min temp = undefined
+<b>Total date range stats:</b><br>undefined
 </center>
 
 </body>
