Raspberry: implement client filter of sensor_id

--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -46,7 +46,13 @@
 			<button onclick="submitFromTo()">Show Data</button>
 		</td>
 	</tr>
-	</table>
+</table>
+
+<table align="center">
+	<tr>
+		<div id="sensors" align="center"></div>
+	</tr>
+</table>
 
 <div id="loadingGraph"><br>Loading Graph...</div>
 
