Raspberry: display message when ESP reports SD card not working Log past data if the time is derrived from ESP time (aka sd failed, then it sent again after RTC data sent)

--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -54,6 +54,8 @@
 	</tr>
 </table>
 
+<div style="text-align:center;"><span id="sd_status" style="text-align:center;font-size:1.2em;background-color:yellow;display:none">SD card malfunction</span></div>
+
 <div id="loadingGraph"><br>Loading Graph...</div>
 
 <script src="static/data-pick.js"></script>
