rasp beta data as text

--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -75,5 +75,8 @@
 <b>Total date range stats:</b><br>undefined
 </center>
 
+<b>Date Time Temperature as text:</b>
+<div style="white-space: pre-line;" id="textDiv"></div>
+
 </body>
 </html>
