--- a/Raspberry/templates/sensor_graph_jquery.html
+++ b/Raspberry/templates/sensor_graph_jquery.html
@@ -75,7 +75,7 @@
 <b>Total date range stats:</b><br>undefined
 </center>
 
-<b>Date Time Temperature as text:</b>
+<b>Date Time Temperature as text:</b> <button id="btnText" onclick="showTextVersion()">Show Text</button>
 <div style="white-space: pre-line;" id="textDiv"></div>
 
 </body>
